added endpoint "/setNoiseLevelMap"
